--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "base-64": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-curved-bottom-bar": "^3.2.7",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.4.0"
   },
   "devDependencies": {
