--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "base-64": "^1.0.0",
+    "d3-shape": "^3.2.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-curved-bottom-bar": "^3.2.7",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
+    "react-native-size-scaling": "^0.5.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.4.0"
   },
