--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "react-native run-android --port=8088",
+    "ios": "react-native run-ios --port=8088",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
