--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3-shape": "^3.2.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-size-scaling": "^0.5.1",
