--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android --port=8088",
+    "android": "react-native run-android",
     "ios": "react-native run-ios --port=8088",
     "lint": "eslint .",
     "start": "react-native start",
