--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.74.3",
     "react-native-element-dropdown": "^2.12.1",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-size-scaling": "^0.5.1",
