--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios --port=8088",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start --port=8088",
     "test": "jest"
   },
   "dependencies": {
@@ -18,8 +18,10 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-size-scaling": "^0.5.1",
