--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-navigation/native-stack": "^6.10.1",
     "axios": "^1.7.3",
     "base-64": "^1.0.0",
+    "buffer": "^6.0.3",
     "d3-shape": "^3.2.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-element-dropdown": "^2.12.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
