--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
     "d3-shape": "^3.2.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-element-dropdown": "^2.12.1",
@@ -33,7 +34,8 @@
     "react-native-screens": "^3.32.0",
     "react-native-size-scaling": "^0.5.1",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^15.4.0"
+    "react-native-svg": "^15.4.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
